# kinqhi

./: .env.example  .envrc  .gitignore  AGENTS.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  cli-config.yaml.example  cli.py  constraints-termux.txt  flake.nix  hermes  kinqhi-already-has-routines.md  kinqhi_bootstrap.py  kinqhi_constants.py  kinqhi_logging.py  kinqhi_state.py  kinqhi_time.py  mcp_serve.py  model_tools.py  package.json  pyproject.toml  run_agent.py  setup-kinqhi.sh  setup.py  toolsets.py  utils.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  setup_help.yml
.github/workflows/: build-windows-installer.yml  deploy-site.yml  docker-publish.yml  skills-index-freshness.yml  skills-index.yml  supply-chain-audit.yml  upload_to_pypi.yml
.plans/: openai-api-server.md  streaming-support.md
acp_adapter/: __init__.py  auth.py  entry.py  events.py  permissions.py  provenance.py  server.py  session.py  tools.py
acp_registry/: agent.json
agent/: account_usage.py  agent_init.py  agent_runtime_helpers.py  anthropic_adapter.py  auxiliary_client.py  azure_identity_adapter.py  background_review.py  bedrock_adapter.py  billing_view.py  browser_provider.py  browser_registry.py  chat_completion_helpers.py  codex_responses_adapter.py  codex_runtime.py  coding_context.py  context_compressor.py  context_engine.py  context_references.py  conversation_compression.py  conversation_loop.py  copilot_acp_client.py  credential_persistence.py  credential_pool.py  credential_sources.py  credits_tracker.py  curator.py  curator_backup.py  display.py  error_classifier.py  file_safety.py  gemini_cloudcode_adapter.py  gemini_native_adapter.py  gemini_schema.py  google_code_assist.py  google_oauth.py  i18n.py  image_gen_provider.py  image_gen_registry.py  image_routing.py  insights.py  (+32 more)
cron/: __init__.py  blueprint_catalog.py  jobs.py  scheduler.py  scheduler_provider.py  suggestion_catalog.py  suggestions.py
docs/: chronos-managed-cron-contract.md  rca-ssl-cacert-post-git-pull.md  relay-connector-contract.md  session-lifecycle.md
gateway/: __init__.py  authz_mixin.py  channel_directory.py  config.py  delivery.py  display_config.py  hooks.py  kanban_watchers.py  memory_monitor.py  mirror.py  pairing.py  platform_registry.py  restart.py  rich_sent_store.py  run.py  runtime_footer.py  session.py  session_context.py  shutdown_forensics.py  slash_commands.py  status.py  stream_consumer.py  stream_events.py
hermes_cli/: config.py  gateway.py  main.py  nous_subscription.py  send_cmd.py  tools_config.py  voice.py  web_server.py
kinqhi_cli/: __init__.py  _parser.py  _subprocess_compat.py  active_sessions.py  auth.py  auth_commands.py  azure_detect.py  backup.py  banner.py  blueprint_cmd.py  browser_connect.py  build_info.py  bundles.py  callbacks.py  checkpoints.py  claw.py  cli_agent_setup_mixin.py  cli_commands_mixin.py  cli_output.py  clipboard.py  codex_models.py  codex_runtime_plugin_migration.py  codex_runtime_switch.py  colors.py  commands.py  completion.py  config.py  container_boot.py  context_switch_guard.py  copilot_auth.py  cron.py  curator.py  curses_ui.py  dashboard_register.py  debug.py  default_soul.py  dep_ensure.py  dingtalk_auth.py  doctor.py  dump.py  (+79 more)
plans/: gemini-oauth-provider.md
plugins/: __init__.py
providers/: README.md  __init__.py  base.py
scripts/: LIVETEST_README.md  benchmark_browser_eval.py  build_model_catalog.py  build_skills_index.py  check-windows-footguns.py  check_subprocess_stdin.py  contributor_audit.py  docker_config_migrate.py  hermes-gateway  install.cmd  install.ps1  install.sh  install_psutil_android.py  keystroke_diagnostic.py  profile-tui.py  release.py  run_tests.sh  run_tests_parallel.py  sample_and_compress.py  setup_open_webui.sh  tool_search_livetest.py
tests/: conftest.py  test_assistant_ui_tap_compat.py  test_atomic_replace_symlinks.py  test_bitwarden_secrets.py  test_cli_manual_compress.py  test_cli_skin_integration.py  test_ctx_halving_fix.py  test_desktop_mac_entitlements.py  test_docker_home_override_scripts.py  test_docker_webui_install_surface.py  test_dockerfile_tini_compat_shim.py  test_empty_model_fallback.py  test_empty_session_hygiene.py  test_env_loader_secret_sources.py  test_gateway_streaming_nested_config.py  test_hermes_bootstrap.py  test_hermes_constants.py  test_hermes_home_profile_warning.py  test_hermes_logging.py  test_hermes_state.py  test_hermes_state_compression_locks.py  test_hermes_state_wal_fallback.py  test_install_no_initial_commit.py  test_install_ps1_uv_powershell_host.py  test_install_sh_browser_install.py  test_install_sh_install_method_stamp.py  test_install_sh_node_global_prefix.py  test_install_sh_pythonpath_sanitization.py  test_install_sh_symlink_stomp.py  test_install_unmerged_index.py  test_ipv4_preference.py  test_lazy_session_regressions.py  test_live_system_guard_self_test.py  test_mcp_serve.py  test_minimax_model_validation.py  test_minimax_oauth.py  test_model_tools.py  test_package_json_lazy_deps.py  test_packaging_metadata.py  test_plugin_skills.py  (+16 more)
tools/: __init__.py  approval.py  blueprints.py  browser_camofox.py  browser_camofox_state.py  browser_cdp_tool.py  browser_supervisor.py  browser_tool.py  checkpoint_manager.py  clarify_gateway.py  code_execution_tool.py  credential_files.py  cronjob_tools.py  debug_helpers.py  delegate_tool.py  env_passthrough.py  env_probe.py  file_operations.py  file_state.py  file_tools.py  interrupt.py  kanban_tools.py  lazy_deps.py  managed_tool_gateway.py  mcp_oauth.py  mcp_oauth_manager.py  mcp_tool.py  memory_tool.py  openrouter_client.py  osv_check.py  process_registry.py  read_terminal_tool.py  registry.py  session_search_tool.py  skill_manager_tool.py  skill_usage.py  skills_ast_audit.py  skills_guard.py  skills_hub.py  skills_sync.py  (+13 more)
tui_gateway/: entry.py  event_publisher.py  server.py  slash_worker.py  transport.py
ui-tui/: README.md  eslint.config.mjs  package.json  tsconfig.build.json
web/: README.md  index.html  vite.config.ts
(+1299 files in other folders)
